tests/suite/snapshots/suite__case_kh5v_02.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: DoubleQuote
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: DoubleQuoted
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 13
    line: 0
    column: 13
- token: DoubleQuote
  start:
    index: 13
    line: 0
    column: 13
  end:
    index: 14
    line: 0
    column: 14
- token: Break
  start:
    index: 14
    line: 0
    column: 14
  end:
    index: 16
    line: 1
    column: 0

