tests/suite/snapshots/suite__case_kk5p.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: Scalar
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 8
- token: MappingValue
  start:
    line: 0
    column: 8
  end:
    line: 0
    column: 9
- token: Break
  start:
    line: 0
    column: 9
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 2
- token: MappingKey
  start:
    line: 1
    column: 2
  end:
    line: 1
    column: 3
- token: Indent
  start:
    line: 1
    column: 3
  end:
    line: 1
    column: 4
- token: SequenceEntry
  start:
    line: 1
    column: 4
  end:
    line: 1
    column: 5
- token: Separator
  start:
    line: 1
    column: 5
  end:
    line: 1
    column: 6
- token: Scalar
  start:
    line: 1
    column: 6
  end:
    line: 1
    column: 7
- token: Break
  start:
    line: 1
    column: 7
  end:
    line: 2
    column: 0
- token: Empty
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 0
- token: Scalar
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 8
- token: MappingValue
  start:
    line: 2
    column: 8
  end:
    line: 2
    column: 9
- token: Break
  start:
    line: 2
    column: 9
  end:
    line: 3
    column: 0
- token: Indent
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 2
- token: MappingKey
  start:
    line: 3
    column: 2
  end:
    line: 3
    column: 3
- token: Indent
  start:
    line: 3
    column: 3
  end:
    line: 3
    column: 4
- token: SequenceEntry
  start:
    line: 3
    column: 4
  end:
    line: 3
    column: 5
- token: Separator
  start:
    line: 3
    column: 5
  end:
    line: 3
    column: 6
- token: Scalar
  start:
    line: 3
    column: 6
  end:
    line: 3
    column: 7
- token: Break
  start:
    line: 3
    column: 7
  end:
    line: 4
    column: 0
- token: Indent
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 2
- token: MappingValue
  start:
    line: 4
    column: 2
  end:
    line: 4
    column: 3
- token: Separator
  start:
    line: 4
    column: 3
  end:
    line: 4
    column: 4
- token: Scalar
  start:
    line: 4
    column: 4
  end:
    line: 4
    column: 5
- token: Break
  start:
    line: 4
    column: 5
  end:
    line: 5
    column: 0
- token: Indent
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 0
- token: Scalar
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 8
- token: MappingValue
  start:
    line: 5
    column: 8
  end:
    line: 5
    column: 9
- token: Break
  start:
    line: 5
    column: 9
  end:
    line: 6
    column: 0
- token: Indent
  start:
    line: 6
    column: 0
  end:
    line: 6
    column: 2
- token: MappingKey
  start:
    line: 6
    column: 2
  end:
    line: 6
    column: 3
- token: Indent
  start:
    line: 6
    column: 3
  end:
    line: 6
    column: 4
- token: SequenceEntry
  start:
    line: 6
    column: 4
  end:
    line: 6
    column: 5
- token: Separator
  start:
    line: 6
    column: 5
  end:
    line: 6
    column: 6
- token: Scalar
  start:
    line: 6
    column: 6
  end:
    line: 6
    column: 7
- token: Break
  start:
    line: 6
    column: 7
  end:
    line: 7
    column: 0
- token: Indent
  start:
    line: 7
    column: 0
  end:
    line: 7
    column: 2
- token: MappingValue
  start:
    line: 7
    column: 2
  end:
    line: 7
    column: 3
- token: Separator
  start:
    line: 7
    column: 3
  end:
    line: 7
    column: 4
- token: Folded
  start:
    line: 7
    column: 4
  end:
    line: 7
    column: 5
- token: Break
  start:
    line: 7
    column: 5
  end:
    line: 8
    column: 0
- token: Indent
  start:
    line: 8
    column: 0
  end:
    line: 8
    column: 4
- token: Scalar
  start:
    line: 8
    column: 4
  end:
    line: 8
    column: 5
- token: ScalarBreak
  start:
    line: 8
    column: 5
  end:
    line: 9
    column: 0
- token: Indent
  start:
    line: 9
    column: 0
  end:
    line: 9
    column: 0
- token: Scalar
  start:
    line: 9
    column: 0
  end:
    line: 9
    column: 8
- token: MappingValue
  start:
    line: 9
    column: 8
  end:
    line: 9
    column: 9
- token: Break
  start:
    line: 9
    column: 9
  end:
    line: 10
    column: 0
- token: Indent
  start:
    line: 10
    column: 0
  end:
    line: 10
    column: 2
- token: MappingKey
  start:
    line: 10
    column: 2
  end:
    line: 10
    column: 3
- token: Separator
  start:
    line: 10
    column: 3
  end:
    line: 10
    column: 4
- token: Folded
  start:
    line: 10
    column: 4
  end:
    line: 10
    column: 5
- token: Break
  start:
    line: 10
    column: 5
  end:
    line: 11
    column: 0
- token: Indent
  start:
    line: 11
    column: 0
  end:
    line: 11
    column: 4
- token: Scalar
  start:
    line: 11
    column: 4
  end:
    line: 11
    column: 5
- token: ScalarBreak
  start:
    line: 11
    column: 5
  end:
    line: 12
    column: 0
- token: Indent
  start:
    line: 12
    column: 0
  end:
    line: 12
    column: 2
- token: MappingValue
  start:
    line: 12
    column: 2
  end:
    line: 12
    column: 3
- token: Empty
  start:
    line: 12
    column: 3
  end:
    line: 12
    column: 3
- token: Break
  start:
    line: 12
    column: 3
  end:
    line: 13
    column: 0
- token: Indent
  start:
    line: 13
    column: 0
  end:
    line: 13
    column: 0
- token: Scalar
  start:
    line: 13
    column: 0
  end:
    line: 13
    column: 8
- token: MappingValue
  start:
    line: 13
    column: 8
  end:
    line: 13
    column: 9
- token: Break
  start:
    line: 13
    column: 9
  end:
    line: 14
    column: 0
- token: Indent
  start:
    line: 14
    column: 0
  end:
    line: 14
    column: 2
- token: MappingKey
  start:
    line: 14
    column: 2
  end:
    line: 14
    column: 3
- token: Indent
  start:
    line: 14
    column: 3
  end:
    line: 14
    column: 4
- token: SequenceEntry
  start:
    line: 14
    column: 4
  end:
    line: 14
    column: 5
- token: Separator
  start:
    line: 14
    column: 5
  end:
    line: 14
    column: 6
- token: Scalar
  start:
    line: 14
    column: 6
  end:
    line: 14
    column: 7
- token: Break
  start:
    line: 14
    column: 7
  end:
    line: 15
    column: 0
- token: Indent
  start:
    line: 15
    column: 0
  end:
    line: 15
    column: 2
- token: MappingValue
  start:
    line: 15
    column: 2
  end:
    line: 15
    column: 3
- token: Indent
  start:
    line: 15
    column: 3
  end:
    line: 15
    column: 4
- token: SequenceEntry
  start:
    line: 15
    column: 4
  end:
    line: 15
    column: 5
- token: Separator
  start:
    line: 15
    column: 5
  end:
    line: 15
    column: 6
- token: Scalar
  start:
    line: 15
    column: 6
  end:
    line: 15
    column: 7
- token: Break
  start:
    line: 15
    column: 7
  end:
    line: 16
    column: 0

