tests/suite/snapshots/suite__case_kmk3.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: Scalar
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 3
    line: 0
    column: 3
- token: MappingValue
  start:
    index: 3
    line: 0
    column: 3
  end:
    index: 4
    line: 0
    column: 4
- token: Break
  start:
    index: 4
    line: 0
    column: 4
  end:
    index: 6
    line: 1
    column: 0
- token: Indent
  start:
    index: 6
    line: 1
    column: 0
  end:
    index: 8
    line: 1
    column: 2
- token: Scalar
  start:
    index: 8
    line: 1
    column: 2
  end:
    index: 11
    line: 1
    column: 5
- token: MappingValue
  start:
    index: 11
    line: 1
    column: 5
  end:
    index: 12
    line: 1
    column: 6
- token: Separator
  start:
    index: 12
    line: 1
    column: 6
  end:
    index: 13
    line: 1
    column: 7
- token: Scalar
  start:
    index: 13
    line: 1
    column: 7
  end:
    index: 14
    line: 1
    column: 8
- token: Break
  start:
    index: 14
    line: 1
    column: 8
  end:
    index: 16
    line: 2
    column: 0
- token: Indent
  start:
    index: 16
    line: 2
    column: 0
  end:
    index: 16
    line: 2
    column: 0
- token: Scalar
  start:
    index: 16
    line: 2
    column: 0
  end:
    index: 19
    line: 2
    column: 3
- token: MappingValue
  start:
    index: 19
    line: 2
    column: 3
  end:
    index: 20
    line: 2
    column: 4
- token: Separator
  start:
    index: 20
    line: 2
    column: 4
  end:
    index: 21
    line: 2
    column: 5
- token: Scalar
  start:
    index: 21
    line: 2
    column: 5
  end:
    index: 22
    line: 2
    column: 6
- token: Break
  start:
    index: 22
    line: 2
    column: 6
  end:
    index: 24
    line: 3
    column: 0

