tests/suite/snapshots/suite__case_kss4.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: DirectivesEnd
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 3
    line: 0
    column: 3
- token: Separator
  start:
    index: 3
    line: 0
    column: 3
  end:
    index: 4
    line: 0
    column: 4
- token: DoubleQuote
  start:
    index: 4
    line: 0
    column: 4
  end:
    index: 5
    line: 0
    column: 5
- token: DoubleQuoted
  start:
    index: 5
    line: 0
    column: 5
  end:
    index: 11
    line: 0
    column: 11
- token: ScalarSpace
  start:
    index: 11
    line: 0
    column: 11
  end:
    index: 13
    line: 1
    column: 0
- token: Indent
  start:
    index: 13
    line: 1
    column: 0
  end:
    index: 13
    line: 1
    column: 0
- token: DoubleQuoted
  start:
    index: 13
    line: 1
    column: 0
  end:
    index: 19
    line: 1
    column: 6
- token: DoubleQuote
  start:
    index: 19
    line: 1
    column: 6
  end:
    index: 20
    line: 1
    column: 7
- token: Break
  start:
    index: 20
    line: 1
    column: 7
  end:
    index: 22
    line: 2
    column: 0
- token: DirectivesEnd
  start:
    index: 22
    line: 2
    column: 0
  end:
    index: 25
    line: 2
    column: 3
- token: Separator
  start:
    index: 25
    line: 2
    column: 3
  end:
    index: 26
    line: 2
    column: 4
- token: Anchor
  start:
    index: 26
    line: 2
    column: 4
  end:
    index: 27
    line: 2
    column: 5
- token: AnchorName
  start:
    index: 27
    line: 2
    column: 5
  end:
    index: 31
    line: 2
    column: 9
- token: Separator
  start:
    index: 31
    line: 2
    column: 9
  end:
    index: 32
    line: 2
    column: 10
- token: Scalar
  start:
    index: 32
    line: 2
    column: 10
  end:
    index: 35
    line: 2
    column: 13
- token: Break
  start:
    index: 35
    line: 2
    column: 13
  end:
    index: 37
    line: 3
    column: 0

