tests/suite/snapshots/suite__case_l24t_00.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: Scalar
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 3
    line: 0
    column: 3
- token: MappingValue
  start:
    index: 3
    line: 0
    column: 3
  end:
    index: 4
    line: 0
    column: 4
- token: Separator
  start:
    index: 4
    line: 0
    column: 4
  end:
    index: 5
    line: 0
    column: 5
- token: Literal
  start:
    index: 5
    line: 0
    column: 5
  end:
    index: 6
    line: 0
    column: 6
- token: Break
  start:
    index: 6
    line: 0
    column: 6
  end:
    index: 8
    line: 1
    column: 0
- token: Indent
  start:
    index: 8
    line: 1
    column: 0
  end:
    index: 10
    line: 1
    column: 2
- token: Scalar
  start:
    index: 10
    line: 1
    column: 2
  end:
    index: 11
    line: 1
    column: 3
- token: ScalarBreak
  start:
    index: 11
    line: 1
    column: 3
  end:
    index: 13
    line: 2
    column: 0
- token: Indent
  start:
    index: 13
    line: 2
    column: 0
  end:
    index: 15
    line: 2
    column: 2
- token: Scalar
  start:
    index: 15
    line: 2
    column: 2
  end:
    index: 16
    line: 2
    column: 3
- token: ScalarBreak
  start:
    index: 16
    line: 2
    column: 3
  end:
    index: 18
    line: 3
    column: 0

