tests/suite/snapshots/suite__case_l9u5.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: Scalar
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 18
    line: 0
    column: 18
- token: Separator
  start:
    index: 18
    line: 0
    column: 18
  end:
    index: 19
    line: 0
    column: 19
- token: MappingValue
  start:
    index: 19
    line: 0
    column: 19
  end:
    index: 20
    line: 0
    column: 20
- token: Separator
  start:
    index: 20
    line: 0
    column: 20
  end:
    index: 21
    line: 0
    column: 21
- token: SequenceStart
  start:
    index: 21
    line: 0
    column: 21
  end:
    index: 22
    line: 0
    column: 22
- token: Break
  start:
    index: 22
    line: 0
    column: 22
  end:
    index: 24
    line: 1
    column: 0
- token: Indent
  start:
    index: 24
    line: 1
    column: 0
  end:
    index: 25
    line: 1
    column: 1
- token: Separator
  start:
    index: 25
    line: 1
    column: 1
  end:
    index: 26
    line: 1
    column: 2
- token: Scalar
  start:
    index: 26
    line: 1
    column: 2
  end:
    index: 43
    line: 1
    column: 19
- token: Separator
  start:
    index: 43
    line: 1
    column: 19
  end:
    index: 44
    line: 1
    column: 20
- token: MappingValue
  start:
    index: 44
    line: 1
    column: 20
  end:
    index: 45
    line: 1
    column: 21
- token: Separator
  start:
    index: 45
    line: 1
    column: 21
  end:
    index: 46
    line: 1
    column: 22
- token: Scalar
  start:
    index: 46
    line: 1
    column: 22
  end:
    index: 51
    line: 1
    column: 27
- token: CollectionEntry
  start:
    index: 51
    line: 1
    column: 27
  end:
    index: 52
    line: 1
    column: 28
- token: Break
  start:
    index: 52
    line: 1
    column: 28
  end:
    index: 54
    line: 2
    column: 0
- token: Indent
  start:
    index: 54
    line: 2
    column: 0
  end:
    index: 55
    line: 2
    column: 1
- token: SequenceEnd
  start:
    index: 55
    line: 2
    column: 1
  end:
    index: 56
    line: 2
    column: 2
- token: Break
  start:
    index: 56
    line: 2
    column: 2
  end:
    index: 58
    line: 3
    column: 0

