tests/suite/snapshots/suite__case_le5a.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: SequenceEntry
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: Separator
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 2
    line: 0
    column: 2
- token: TagHandle
  start:
    index: 2
    line: 0
    column: 2
  end:
    index: 4
    line: 0
    column: 4
- token: TagSuffix
  start:
    index: 4
    line: 0
    column: 4
  end:
    index: 7
    line: 0
    column: 7
- token: Separator
  start:
    index: 7
    line: 0
    column: 7
  end:
    index: 8
    line: 0
    column: 8
- token: DoubleQuote
  start:
    index: 8
    line: 0
    column: 8
  end:
    index: 9
    line: 0
    column: 9
- token: DoubleQuoted
  start:
    index: 9
    line: 0
    column: 9
  end:
    index: 10
    line: 0
    column: 10
- token: DoubleQuote
  start:
    index: 10
    line: 0
    column: 10
  end:
    index: 11
    line: 0
    column: 11
- token: Break
  start:
    index: 11
    line: 0
    column: 11
  end:
    index: 13
    line: 1
    column: 0
- token: Indent
  start:
    index: 13
    line: 1
    column: 0
  end:
    index: 13
    line: 1
    column: 0
- token: SequenceEntry
  start:
    index: 13
    line: 1
    column: 0
  end:
    index: 14
    line: 1
    column: 1
- token: Separator
  start:
    index: 14
    line: 1
    column: 1
  end:
    index: 15
    line: 1
    column: 2
- token: SingleQuote
  start:
    index: 15
    line: 1
    column: 2
  end:
    index: 16
    line: 1
    column: 3
- token: SingleQuoted
  start:
    index: 16
    line: 1
    column: 3
  end:
    index: 17
    line: 1
    column: 4
- token: SingleQuote
  start:
    index: 17
    line: 1
    column: 4
  end:
    index: 18
    line: 1
    column: 5
- token: Break
  start:
    index: 18
    line: 1
    column: 5
  end:
    index: 20
    line: 2
    column: 0
- token: Indent
  start:
    index: 20
    line: 2
    column: 0
  end:
    index: 20
    line: 2
    column: 0
- token: SequenceEntry
  start:
    index: 20
    line: 2
    column: 0
  end:
    index: 21
    line: 2
    column: 1
- token: Separator
  start:
    index: 21
    line: 2
    column: 1
  end:
    index: 22
    line: 2
    column: 2
- token: Anchor
  start:
    index: 22
    line: 2
    column: 2
  end:
    index: 23
    line: 2
    column: 3
- token: AnchorName
  start:
    index: 23
    line: 2
    column: 3
  end:
    index: 29
    line: 2
    column: 9
- token: Separator
  start:
    index: 29
    line: 2
    column: 9
  end:
    index: 30
    line: 2
    column: 10
- token: DoubleQuote
  start:
    index: 30
    line: 2
    column: 10
  end:
    index: 31
    line: 2
    column: 11
- token: DoubleQuoted
  start:
    index: 31
    line: 2
    column: 11
  end:
    index: 32
    line: 2
    column: 12
- token: DoubleQuote
  start:
    index: 32
    line: 2
    column: 12
  end:
    index: 33
    line: 2
    column: 13
- token: Break
  start:
    index: 33
    line: 2
    column: 13
  end:
    index: 35
    line: 3
    column: 0
- token: Indent
  start:
    index: 35
    line: 3
    column: 0
  end:
    index: 35
    line: 3
    column: 0
- token: SequenceEntry
  start:
    index: 35
    line: 3
    column: 0
  end:
    index: 36
    line: 3
    column: 1
- token: Separator
  start:
    index: 36
    line: 3
    column: 1
  end:
    index: 37
    line: 3
    column: 2
- token: Alias
  start:
    index: 37
    line: 3
    column: 2
  end:
    index: 38
    line: 3
    column: 3
- token: AnchorName
  start:
    index: 38
    line: 3
    column: 3
  end:
    index: 44
    line: 3
    column: 9
- token: Break
  start:
    index: 44
    line: 3
    column: 9
  end:
    index: 46
    line: 4
    column: 0
- token: Indent
  start:
    index: 46
    line: 4
    column: 0
  end:
    index: 46
    line: 4
    column: 0
- token: SequenceEntry
  start:
    index: 46
    line: 4
    column: 0
  end:
    index: 47
    line: 4
    column: 1
- token: Separator
  start:
    index: 47
    line: 4
    column: 1
  end:
    index: 48
    line: 4
    column: 2
- token: TagHandle
  start:
    index: 48
    line: 4
    column: 2
  end:
    index: 50
    line: 4
    column: 4
- token: TagSuffix
  start:
    index: 50
    line: 4
    column: 4
  end:
    index: 53
    line: 4
    column: 7
- token: Empty
  start:
    index: 53
    line: 4
    column: 7
  end:
    index: 53
    line: 4
    column: 7
- token: Break
  start:
    index: 53
    line: 4
    column: 7
  end:
    index: 55
    line: 5
    column: 0

